--- a/package.json
+++ b/package.json
@@ -4,9 +4,16 @@
   "description": "",
   "main": "app.js",
   "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "connect-sqlite3": "^0.9.11",
+    "cookie-parser": "^1.4.5",
+    "csurf": "^1.11.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
-    "nodemon": "^2.0.3"
+    "express-session": "^1.17.1",
+    "nodemon": "^2.0.3",
+    "sqlite": "^4.0.10"
   },
   "devDependencies": {},
   "scripts": {
