--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.3",
     "sqlite": "^4.0.10"
   },
