--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "nodemon": "^2.0.3",
-    "sqlite": "^4.0.10"
+    "sqlite": "^4.0.19",
+    "sqlite3": "^5.0.1"
   },
   "devDependencies": {},
   "scripts": {
