--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
+    "nodemailer": "^6.5.0",
     "nodemon": "^2.0.3",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.1"
