mail service is not working as intended

--- a/package.json
+++ b/package.json
@@ -9,16 +9,17 @@
     "connect-sqlite3": "^0.9.11",
     "cookie-parser": "^1.4.5",
     "csurf": "^1.11.0",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "express-session": "^1.17.1",
+    "googleapis": "^70.0.0",
     "multer": "^1.4.2",
     "nodemailer": "^6.5.0",
     "nodemon": "^2.0.3",
     "sqlite": "^4.0.19",
     "sqlite3": "^5.0.1"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "nodemon app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
